--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="col-xl-2 col-lg-2 col-md-7 col-sm-7 col-7">
                             <div class="echo-site-logo">
                                 <a href="index.html">
-                                    <img src="assets/images/logo/logo-2.png" alt="logo">
+                                    <img src="assets/images/logo/logo-4.png" alt="logo">
                                 </a>
                             </div>
                         </div>
@@ -231,11 +231,12 @@
                     <li class="menu-item"><a class="mobile-menu-link main" href="commandents-desk.html">Commandents Desk</a></li>
                     <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Editorial Desk</a></li>
                     <li class="has-droupdown">
-                        <a href="./contents.html" class="main">Contents</a>
+                        <a href="#" class="main">Contents</a>
                         <ul class="submenu">
-                            <li><a class="mobile-menu-link" href="category-style-1.html">Article 1</a></li>
-                            <li><a class="mobile-menu-link" href="category-style-2.html">Article 2</a></li>
-                            <li><a class="mobile-menu-link" href="category-style-3.html">Article 3</a></li>
+                            <li><a class="mobile-menu-link" href="post-style-1.html">Article 1</a></li>
+                            <li><a class="mobile-menu-link" href="post-style-2.html">Article 2</a></li>
+                            <li><a class="mobile-menu-link" href="post-style-3.html">Article 3</a></li>
+                            
                         </ul>
                     </li>
                    <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Book Brief</a></li>
@@ -250,7 +251,7 @@
                             <li><a class="mobile-menu-link" href="post-details.html">Post Details</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item"><a class="mobile-menu-link" href="contact.html">Contact</a></li>
+                    
                 </ul>
             </nav>
 
