--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 
 
     <!-- Start Feature Area -->
-    <section class="echo-feature-area home-four">
+    <!-- <section class="echo-feature-area home-four">
         <div class="echo-feature-area-content">
             <div class="container">
                 <div class="echo-feature-area-full-content">
@@ -787,12 +787,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Feature Area -->
 
 
     <!-- Start Popular Area -->
-    <section class="echo-popular-news-area home-four">
+    <!-- <section class="echo-popular-news-area home-four">
         <div class="echo-popular-news-area-content">
             <div class="container">
                 <div class="echo-popular-news-area-full-content">
@@ -984,11 +984,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Popular Area -->
 
     <!-- Start Our Software Download -->
-    <section class="echo-software-download-area home-four">
+    <!-- <section class="echo-software-download-area home-four">
         <div class="container">
             <div class="echo-software-download-full-content-bg">
                 <div class="echo-software-download-img-content">
@@ -1019,7 +1019,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Our Software Download -->
 
     <!-- Start Footer Area -->
@@ -1028,10 +1028,10 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-top-inner">
-                    <div class="footer-top-left">
+                    <!-- <div class="footer-top-left">
                         <h3 class="content">Get the gaming world News & Stories into your inbox</h3>
-                    </div>
-                    <div class="footer-top-right">
+                    </div> -->
+                    <!-- <div class="footer-top-right">
                         <div class="echo-subscribe-box-button">
                             <form action="POST">
                                 <div class="echo-subscribe-input-fill">
@@ -1044,15 +1044,15 @@
                                 <p class="desc">By subscribing, you accepted the our <a href="#">Policy</a></p>
                             </form>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="footer-main">
                 <div class="footer-main-inner">
                     <div class="logo-area">
-                        <a href="index.html"><img src="assets/images/home-1/site-logo/site-logo4-w.svg" alt="logo"></a>
+                        <a href="index.html"><img src="assets/images/logo/logo-2.png" alt="logo"></a>
                     </div>
-                    <ul class="social-area">
+                    <!-- <ul class="social-area">
                         <li class="social-icon"><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li class="social-icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                         <li class="social-icon"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
@@ -1066,14 +1066,13 @@
                         <li class="menu-item"><a href="#">VR Game</a></li>
                         <li class="menu-item"><a href="#">AR Game</a></li>
                         <li class="menu-item"><a href="#">Mobile Game</a></li>
-                        <li class="menu-item"><a href="#">E-Sports</a></li>
                         <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
             <div class="footer-copyright-area">
                 <div class="copyright-area-inner">
-                    <h5 class="title">© Copyright 2023 by Echo</h5>
+                    <h5 class="title">Copyright @ 2024 College Of Defence Management. All Rights Reserved. Designed & Developed by <a href="https://safyrus.com/">Safyrus Media</a></h5>
                 </div>
             </div>
         </div>
