--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                                 <div class="echo-home-1-menu">
                                     <ul class="list-unstyled echo-desktop-menu">
                                         <li class="menu-item">
-                                            <a href="/index.html" class="echo-dropdown-main-element active">Home</a>
+                                            <a href="/dur-drishti/index.html" class="echo-dropdown-main-element active">Home</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="/commandents-desk.html" class="echo-dropdown-main-element">Commandents Desk</a>
+                                            <a href="/dur-drishti/commandents-desk.html" class="echo-dropdown-main-element">Commandents Desk</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="/editorial-desk.html" class="echo-dropdown-main-element">Editorial Desk</a>
+                                            <a href="/dur-drishti/editorial-desk.html" class="echo-dropdown-main-element">Editorial Desk</a>
                                         </li>
                                          <li class="menu-item echo-has-dropdown">
                                             <a href="#" class="echo-dropdown-main-element">Contents</a>
@@ -81,7 +81,7 @@
                                             <a href="/forms.html" class="echo-dropdown-main-element">Forms</a>
                                         </li>
                                         <li class="menu-item echo-has-dropdown">
-                                            <a href="about.html" class="echo-dropdown-main-element">About</a>
+                                            <a href="/dur-drishti/about.html" class="echo-dropdown-main-element">About</a>
                                             <ul class="echo-submenu list-unstyled menu-pages">
                                                 <li class="nav-item"><a href="#">College of Defence Management</a></li>
                                                 <li class="nav-item"><a href="#">The Journal</a></li>
