--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <div class="echo-home-1-menu">
                                     <ul class="list-unstyled echo-desktop-menu">
                                         <li class="menu-item">
-                                            <a href="/dur-drishti/index.html" class="echo-dropdown-main-element active">Home</a>
+                                            <a href="/dur-drishti/" class="echo-dropdown-main-element active">Home</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="/dur-drishti/commandents-desk.html" class="echo-dropdown-main-element">Commandents Desk</a>
@@ -78,7 +78,7 @@
                                             <a href="/author-guidelines.html" class="echo-dropdown-main-element">Author Guidelines</a>
                                         </li>
                                          <li class="menu-item ">
-                                            <a href="/forms.html" class="echo-dropdown-main-element">Forms</a>
+                                            <a href="/dur-drishti/forms.html" class="echo-dropdown-main-element">Forms</a>
                                         </li>
                                         <li class="menu-item echo-has-dropdown">
                                             <a href="/dur-drishti/about.html" class="echo-dropdown-main-element">About</a>
@@ -228,9 +228,9 @@
         <div class="mobile-menu d-block d-lg-none">
             <nav class="nav-main mainmenu-nav mt--30">
                 <ul class="mainmenu" id="mobile-menu-active">
-                    <li class="menu-item"><a class="mobile-menu-link main" href="./index.html">Home</a></li>
-                    <li class="menu-item"><a class="mobile-menu-link main" href="commandents-desk.html">Commandents Desk</a></li>
-                    <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Editorial Desk</a></li>
+                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/">Home</a></li>
+                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/commandents-desk.html">Commandents Desk</a></li>
+                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/editorial-desk.html">Editorial Desk</a></li>
                     <li class="has-droupdown">
                         <a href="#" class="main">Contents</a>
                         <ul class="submenu">
@@ -244,7 +244,7 @@
                    <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Author Guidelines</a></li>
                    <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Forms</a></li>
                     <li class="has-droupdown">
-                        <a href="#" class="main">About</a>
+                        <a href="/dur-drishti/about.html" class="main">About</a>
                         <ul class="submenu">
                             <li class="mobile-menu-link"><a href="#">College of Defence Management</a></li>
                             <li class="mobile-menu-link"><a href="#">The Journal</a></li>
