--- a/about.html
+++ b/about.html
@@ -66,16 +66,16 @@
                                          <li class="menu-item echo-has-dropdown">
                                             <a href="#" class="echo-dropdown-main-element">Contents</a>
                                             <ul class="echo-submenu list-unstyled menu-pages">
-                                                <li class="nav-item"><a href="post-style-1.html">Energising Defence Industry Ecosystem to Meet Nation's Export Aspirations: Current Perspective and Way Ahead</a></li>
-                                                <li class="nav-item"><a href="post-style-2.html">Strategy for Convergence of Civil-Military MRO</a></li>
-                                                <li class="nav-item"><a href="post-style-3.html">Policy to Practice: A Qualitative Study to Understand the Implementation of Inclusive Education Policies in Army Public Schools</a></li>
+                                                <li class="nav-item"><a href="/dur-drishti/energising-defence-industry-ecosystem-to-meet-nation-s-export-aspirations-current-perspective-and-way-ahead.html">Energising Defence Industry Ecosystem to Meet Nation's Export Aspirations: Current Perspective and Way Ahead</a></li>
+                                                <li class="nav-item"><a href="#">Strategy for Convergence of Civil-Military MRO</a></li>
+                                                <li class="nav-item"><a href="#">Policy to Practice: A Qualitative Study to Understand the Implementation of Inclusive Education Policies in Army Public Schools</a></li>
                                             </ul>
                                         </li>
                                          <li class="menu-item">
-                                            <a href="/book-brief.html" class="echo-dropdown-main-element">Book Brief</a>
+                                            <a href="#" class="echo-dropdown-main-element">Book Brief</a>
                                         </li>
                                          <li class="menu-item">
-                                            <a href="/author-guidelines.html" class="echo-dropdown-main-element">Author Guidelines</a>
+                                            <a href="#" class="echo-dropdown-main-element">Author Guidelines</a>
                                         </li>
                                          <li class="menu-item ">
                                             <a href="/dur-drishti/forms.html" class="echo-dropdown-main-element">Forms</a>
@@ -165,6 +165,7 @@
         </div>
         <!-- End Home-1 Menu & Site Logo & Social Media -->
     </header>
+
     <!-- End Top Header Area -->
 
     <!-- side bar for desktop -->
@@ -233,15 +234,15 @@
                     <li class="has-droupdown">
                         <a href="#" class="main">Contents</a>
                         <ul class="submenu">
-                            <li><a class="mobile-menu-link" href="post-style-1.html">Energising Defence Industry Ecosystem to Meet Nation's Export Aspirations: Current Perspective and Way Ahead</a></li>
-                            <li><a class="mobile-menu-link" href="post-style-2.html">Strategy for Convergence of Civil-Military MRO</a></li>
-                            <li><a class="mobile-menu-link" href="post-style-3.html">Policy to Practice: A Qualitative Study to Understand the Implementation of Inclusive Education Policies in Army Public Schools</a></li>
+                            <li><a class="mobile-menu-link" href="/dur-drishti/energising-defence-industry-ecosystem-to-meet-nation-s-export-aspirations-current-perspective-and-way-ahead.html">Energising Defence Industry Ecosystem to Meet Nation's Export Aspirations: Current Perspective and Way Ahead</a></li>
+                            <li><a class="mobile-menu-link" href="#">Strategy for Convergence of Civil-Military MRO</a></li>
+                            <li><a class="mobile-menu-link" href="#">Policy to Practice: A Qualitative Study to Understand the Implementation of Inclusive Education Policies in Army Public Schools</a></li>
                             
                         </ul>
                     </li>
-                   <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Book Brief</a></li>
-                   <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Author Guidelines</a></li>
-                   <li class="menu-item"><a class="mobile-menu-link main" href="editorial-desk.html">Forms</a></li>
+                   <li class="menu-item"><a class="mobile-menu-link main" href="#">Book Brief</a></li>
+                   <li class="menu-item"><a class="mobile-menu-link main" href="#">Author Guidelines</a></li>
+                   <li class="menu-item"><a class="mobile-menu-link main" href="#">Forms</a></li>
                     <li class="has-droupdown">
                         <a href="/dur-drishti/about.html" class="main">About</a>
                         <ul class="submenu">
