--- a/editorial-desk.html
+++ b/editorial-desk.html
@@ -19,8 +19,7 @@
 <body class="innerpage">
     <!-- Start Top Header Area -->
 
-    <!-- Start Top Header Area -->
-    <!-- Start Top Header Area -->
+<!-- Start Top Header Area -->
     <header class="echo-header-area header-four">
         <div class="echo-header-top">
             <div class="container">
@@ -79,7 +78,7 @@
                                             <a href="#" class="echo-dropdown-main-element">Author Guidelines</a>
                                         </li>
                                          <li class="menu-item ">
-                                            <a href="/dur-drishti/forms.html" class="echo-dropdown-main-element">Forms</a>
+                                            <a href="#" class="echo-dropdown-main-element">Forms</a>
                                         </li>
                                         <li class="menu-item echo-has-dropdown">
                                             <a href="/dur-drishti/about.html" class="echo-dropdown-main-element">About</a>
@@ -166,7 +165,6 @@
         </div>
         <!-- End Home-1 Menu & Site Logo & Social Media -->
     </header>
-
     <!-- End Top Header Area -->
 
     <!-- side bar for desktop -->
@@ -176,9 +174,9 @@
             <!-- inner menu area desktop start -->
             <div class="inner-main-wrapper-desk d-none d-lg-block">
                 <div class="thumbnail">
-                    <img src="assets/images/home-1/site-logo/site-logo4-w.svg" alt="echo">
+                    <img src="assets/images/logo/logo-2.png" alt="logo">
                 </div>
-                <div class="inner-content">
+                <!-- <div class="inner-content">
                     <div class="category-menu-area">
                         <ul class="category-area">
                             <li class="item">
@@ -222,7 +220,7 @@
                             </form>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- mobile menu area start -->
