--- a/index.html
+++ b/index.html
@@ -366,12 +366,12 @@
                                     <li>
                                         <div class="content">
                                             <h5 class="title">
-                                                <a href="#" class="text-capitalize title-hover">Commandents Desk</a>
+                                                <a href="/dur-drishti/commandents-desk.html" class="text-capitalize title-hover">Commandents Desk</a>
                                             </h5>
                                             <!-- <p class="desc"><i class="fa-solid fa-calendar"></i>01 Jan 2023</p> -->
                                         </div>
                                         <div class="echo-latest-news-img img-transition-scale">
-                                            <a href="#">
+                                            <a href="/dur-drishti/commandents-desk.html">
                                                 <img src="assets/images/home-1/trending-right/item-2.jpg" alt="">
                                             </a>
                                         </div>
@@ -379,12 +379,12 @@
                                     <li>
                                         <div class="content">
                                             <h5 class="title">
-                                                <a href="#" class="text-capitalize title-hover">Editorial Desk</a>
+                                                <a href="/dur-drishti/editorial-desk.html" class="text-capitalize title-hover">Editorial Desk</a>
                                             </h5>
                                             <!-- <p class="desc"><i class="fa-solid fa-calendar"></i>01 Jan 2023</p> -->
                                         </div>
                                         <div class="echo-latest-news-img img-transition-scale">
-                                            <a href="#">
+                                            <a href="/dur-drishti/editorial-desk.html">
                                                 <img src="assets/images/home-1/trending-right/item-3.jpg" alt="">
                                             </a>
                                         </div>
@@ -392,12 +392,12 @@
                                     <li>
                                         <div class="content">
                                             <h5 class="title">
-                                                <a href="#" class="text-capitalize title-hover">About Dur Drishti</a>
+                                                <a href="/dur-drishti/about.html" class="text-capitalize title-hover">About Dur Drishti</a>
                                             </h5>
                                             <!-- <p class="desc"><i class="fa-solid fa-calendar"></i>01 Jan 2023</p> -->
                                         </div>
                                         <div class="echo-latest-news-img img-transition-scale">
-                                            <a href="#">
+                                            <a href="/dur-drishti/about.html">
                                                 <img src="assets/images/home-1/trending-right/item-4.jpg" alt="">
                                             </a>
                                         </div>
@@ -594,11 +594,11 @@
                                                 <div class="col-xl-12">
                                                     <div class="echo-feature-area-last-content">
                                                         <div class="echo-feature-area-last-content-img img-transition-scale">
-                                                            <a href="post-details.html"> <img src="assets/images/home-1/hero/banner-right.jpg" alt="Echo" class="img-hover"></a>
+                                                            <a href="/dur-drishti/energising-defence-industry-ecosystem-to-meet-nation-s-export-aspirations-current-perspective-and-way-ahead.html"> <img src="assets/images/home-1/hero/banner-right.jpg" alt="Echo" class="img-hover"></a>
                                                         </div>
                                                         <div class="echo-feature-area-last-content-text">
                                                             <!-- <span class="content-catagory-tag">Maj Gen Manoj Kumar, SM, VSM & Brig (Dr) Anand Tiwari (Retd)</span> -->
-                                                            <h3 class="text-capitalize"><a href="post-details.html" class="title-hover">Energising Defence Industry Ecosystem to Meet Nation's Export Aspirations: Current Perspective and Way Ahead</a></h3>
+                                                            <h3 class="text-capitalize"><a href="/dur-drishti/energising-defence-industry-ecosystem-to-meet-nation-s-export-aspirations-current-perspective-and-way-ahead.html" class="title-hover">Energising Defence Industry Ecosystem to Meet Nation's Export Aspirations: Current Perspective and Way Ahead</a></h3>
                                                             <div class="echo-latest-news-time-views">
                                                                 <span class="">Maj Gen Manoj Kumar, SM, VSM & Brig (Dr) Anand Tiwari (Retd)</span>
                                                             </div>
