--- a/energising-defence-industry-ecosystem-to-meet-nation-s-export-aspirations-current-perspective-and-way-ahead.html
+++ b/energising-defence-industry-ecosystem-to-meet-nation-s-export-aspirations-current-perspective-and-way-ahead.html
@@ -18,8 +18,7 @@
 
 <body class="innerpage">
     <!-- Start Top Header Area -->
-
-<!-- Start Top Header Area -->
+    <!-- Start Top Header Area -->
     <header class="echo-header-area header-four">
         <div class="echo-header-top">
             <div class="container">
@@ -58,7 +57,7 @@
                                             <a href="/dur-drishti/" class="echo-dropdown-main-element active">Home</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="/dur-drishti/commandents-desk.html" class="echo-dropdown-main-element">Commandents Desk</a>
+                                            <a href="/dur-drishti/commandant-desk.html" class="echo-dropdown-main-element">Commandent Desk</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="/dur-drishti/editorial-desk.html" class="echo-dropdown-main-element">Editorial Desk</a>
@@ -228,7 +227,7 @@
             <nav class="nav-main mainmenu-nav mt--30">
                 <ul class="mainmenu" id="mobile-menu-active">
                     <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/">Home</a></li>
-                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/commandents-desk.html">Commandents Desk</a></li>
+                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/commandent-desk.html">Commandent Desk</a></li>
                     <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/editorial-desk.html">Editorial Desk</a></li>
                     <li class="has-droupdown">
                         <a href="#" class="main">Contents</a>
