--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                             <a href="/dur-drishti/" class="echo-dropdown-main-element active">Home</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="/dur-drishti/commandents-desk.html" class="echo-dropdown-main-element">Commandents Desk</a>
+                                            <a href="/dur-drishti/commandant-desk.html" class="echo-dropdown-main-element">Commandent Desk</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="/dur-drishti/editorial-desk.html" class="echo-dropdown-main-element">Editorial Desk</a>
@@ -228,7 +228,7 @@
             <nav class="nav-main mainmenu-nav mt--30">
                 <ul class="mainmenu" id="mobile-menu-active">
                     <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/">Home</a></li>
-                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/commandents-desk.html">Commandents Desk</a></li>
+                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/commandent-desk.html">Commandent Desk</a></li>
                     <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/editorial-desk.html">Editorial Desk</a></li>
                     <li class="has-droupdown">
                         <a href="#" class="main">Contents</a>
@@ -366,7 +366,7 @@
                                     <li>
                                         <div class="content">
                                             <h5 class="title">
-                                                <a href="/dur-drishti/commandents-desk.html" class="text-capitalize title-hover">Commandents Desk</a>
+                                                <a href="/dur-drishti/commandent-desk.html" class="text-capitalize title-hover">Commandant Desk</a>
                                             </h5>
                                             <!-- <p class="desc"><i class="fa-solid fa-calendar"></i>01 Jan 2023</p> -->
                                         </div>
