--- a/editorial-desk.html
+++ b/editorial-desk.html
@@ -57,7 +57,7 @@
                                             <a href="/dur-drishti/" class="echo-dropdown-main-element active">Home</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="/dur-drishti/commandant-desk.html" class="echo-dropdown-main-element">Commandent Desk</a>
+                                            <a href="/dur-drishti/commandant-desk.html" class="echo-dropdown-main-element">commandant Desk</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="/dur-drishti/editorial-desk.html" class="echo-dropdown-main-element">Editorial Desk</a>
@@ -227,7 +227,7 @@
             <nav class="nav-main mainmenu-nav mt--30">
                 <ul class="mainmenu" id="mobile-menu-active">
                     <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/">Home</a></li>
-                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/commandent-desk.html">Commandent Desk</a></li>
+                    <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/commandant-desk.html">commandant Desk</a></li>
                     <li class="menu-item"><a class="mobile-menu-link main" href="/dur-drishti/editorial-desk.html">Editorial Desk</a></li>
                     <li class="has-droupdown">
                         <a href="#" class="main">Contents</a>
